added new image generator notebook

--- a/read_OOI.ipynb
+++ b/read_OOI.ipynb
@@ -18,6 +18,8 @@
     "import matplotlib\n",
     "\n",
     "%matplotlib inline\n",
+    "\n",
+    "# site / node / instrument (hydrophone)\n",
     "data_url = 'https://rawdata.oceanobservatories.org/files/CE02SHBP/LJ01D/11-HYDBBA106/2016/01/18/OO-HYEA2--YDH-2016-01-18T10:20:00.000000.mseed'\n",
     "#localFileName = '../data/merged_hydrophone.mseed'"
    ]
@@ -199,9 +201,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 OOI",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ooi"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -213,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
